--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="social_container">
+            <ol class="social_list">
+                <li><a href="#"><img src="linkedin.png" alt="LinkedIn"></a></li>
+                <li><a href="#"><img src="github.png" alt="GitHub"></a></li>
+                <li><span>My Email: pham.nguyen@torontomu.ca</span></li>
+            </ol>
+        </div>
+    </header>
 
     <div class="body">
         <div class="intro">
