--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="intro_aboutMe">
                     <h1 class="text">About me</h1>
-                    <h2 class="text_h2">Hi, My name is Long</h2>
+                    <h2 class="text_h2" id="guest_name">Hi, My name is Long</h2>
                     <div class="info">
                         <div class="label">Name:</div>
                         <div class="value">Long Nguyen</div>
@@ -254,13 +254,14 @@
         </div>
     </div>
 
-    <div class="name-insert-section">
+    <div class="name-insert-section" id="name-insert-section">
         <div class="insert-section">
             <h1>Please enter your name</h1>
-            <div class="input-name-section">
+            <div class="input-name-section" id="input-name-section">
                 <input type="text" id="name_insert">
-                <button>Submit</button>
+                <button onclick="submitName()">Submit</button>
             </div>
+            <h3 id="userWarning" class="userWarning">Please input your name</h3>
             
         </div>
     </div>
