--- a/index.html
+++ b/index.html
@@ -26,6 +26,34 @@
     </style>
 </head>
 <body>
+    
+    <nav class="navigation-container">
+        <div class="navigation-items">
+
+            <a href="">Long Nguyen</a>
+            <div class="navigation-bar">                
+                <ul>
+                    <li>
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="">Education</a>
+                    </li>
+                    <li>
+                        <a href="">Courses</a>
+                    </li>
+                    <li>
+                        <a href="">Experience</a>
+                    </li>
+                    <li>
+                        <a href="">Project</a>
+                    </li>               
+                </ul>
+            </div>
+
+        </div>
+    </nav>
+
     <div class="body_container">
         <div class="body">
             <div class="intro">
@@ -259,7 +287,7 @@
             <h1>Please enter your name</h1>
             <div class="input-name-section" id="input-name-section">
                 <input type="text" id="name_insert">
-                <button onclick="submitName()">Submit</button>
+                <button onclick="submitName()" id="hover-submit-button">Submit</button>
             </div>
             <h3 id="userWarning" class="userWarning">Please input your name</h3>
             
