--- a/index.html
+++ b/index.html
@@ -8,21 +8,6 @@
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="style3.css">
     <style>
-        @keyframes appear {
-            from {
-                opacity: 0;
-                translateY: (-200px);
-            }to {
-                opacity: 1;
-                translateY: (0px);
-            }
-        }
-        .education_content, .education_item, .course_content, .course_item {
-            animation: appear 5s linear;
-            animation-timeline: view();
-            animation-range: entry 0 cover 20%;
-
-        } 
     </style>
 </head>
 <body>
@@ -79,11 +64,11 @@
                         <div class="value">Vietnamese</div>
                     </div>
                     <div class="social-container">
-                        <a href="#">
+                        <a href="https://github.com/2kEGO">
                             <img src="25231.png" alt="">
                             <span>Github</span>
                         </a>
-                        <a href="#">
+                        <a href="https://www.linkedin.com/in/nguyenphamthanhlong/">
                             <img src="linkedin.webp" alt="">
                             <span>Linkedin</span>
                         </a>
